objects/Programme_Aim__c.object
<CustomObject><fields>
        <fullName>Entry_Awards__c</fullName>
        <inlineHelpText>Which entry awards are applicable to this Aim</inlineHelpText>
        <label>Entry Awards</label>
        <picklist>
            <picklistValues>
                <fullName>All Awards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSc &amp; PGDip Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSc Only</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Programme_Version__c</fullName>
        <label>Programme Version</label>
        <referenceTo>Programme_Version__c</referenceTo>
        <relationshipLabel>Aims</relationshipLabel>
        <relationshipName>Programme_Aims</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Record_No__c</fullName>
        <description>Text and not number to be consistent with Outcome Record No which needs letter prefix; set by workflow</description>
        <inlineHelpText>Leave blank on record creation if automatic numbering is required (set by Workflow)</inlineHelpText>
        <label>No.</label>
        <length>5</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Specific_Aim__c</fullName>
        <label>Specific Aim</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Programme Aim</label><nameField>
        <displayFormat>PA-{000000}</displayFormat>
        <label>Aim Ref</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Programme Aims</pluralLabel><sharingModel>ControlledByParent</sharingModel><listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>